--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
+
 plugins {
     id 'java'
 }
+
+group = 'air'
+sourceCompatibility = '1.8'
 
 version '1.0-SNAPSHOT'
 
@@ -13,15 +17,27 @@ ext {
     dcm4cheVersion = '3.3.5'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class':'air.DicomMain'
+    }
+    from{
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+
+    }
+
+}
+
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
-    compile("org.apache.logging.log4j:log4j-api:2.10.0")
-    compile("org.apache.logging.log4j:log4j-core:2.10.0")
-    compile("org.apache.logging.log4j:log4j-slf4j-impl:2.10.0")
-    compile("org.apache.logging.log4j:log4j-1.2-api:2.10.0")
+    compile group: 'org.apache.poi', name: 'poi', version: '3.9'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'
+    implementation("org.apache.logging.log4j:log4j-api:2.10.0")
+    implementation("org.apache.logging.log4j:log4j-core:2.10.0")
+    implementation("org.apache.logging.log4j:log4j-slf4j-impl:2.10.0")
+    implementation("org.apache.logging.log4j:log4j-1.2-api:2.10.0")
 
 
     compile(
@@ -33,11 +49,13 @@ dependencies {
 
 }
 
-test {
-    useJUnitPlatform()
-}
+configurations.all {
+    exclude group: "org.slf4j", module: "slf4j-log4j12"
+    exclude group: "log4j", module: "log4j"
+    /* exclude group: 'ch.qos.logback', module: 'logback-classic'
+     exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'*/
 
-compileJava.options.encoding = 'UTF-8'
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+//    reference
+//    http://buransky.com/programming/exclude-log4j-to-use-slf4j-with-logback-in-a-gradle-project/
+//    https://stackoverflow.com/questions/18952479/how-to-exclude-multiple-slf4j-bindings-to-log4j
 }
